Initial commit of QRAlarm 2.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,99 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name" translatable="false">QRAlarm</string>
-    <string name="alarm_notification_channel_name">Firing alarms</string>
-    <string name="alarm_notification_channel_description">Plays alarm sound, displays a notification and pops up on screen</string>
-    <string name="alarm_notification_title">QRAlarm</string>
-    <string name="alarm_notification_text_normal">Go and scan Your QR Code!</string>
-    <string name="stop">STOP</string>
-    <string name="start">START</string>
-    <string name="alarm_permission_required_title">Special app access required</string>
-    <string name="alarm_permission_required_message">QRAlarm needs an \"Alarms &amp; reminders\" special app access to schedule alarms that can be fired at exact times. The access is revoked and thus must be granted via system settings.</string>
-    <string name="later">Later</string>
-    <string name="settings">Settings</string>
-    <string name="camera_permission_required_title">Camera permission required</string>
-    <string name="camera_permission_set_alarm_required_message">QRAlarm needs access to Your phone’s camera in order to scan for QR Codes to disable alarms. Without this permission the app can not work properly.</string>
-    <string name="camera_permission_add_code_required_message">QRAlarm needs access to Your phone’s camera in order to scan for QR Codes containing a new dismiss code.</string>
-    <string name="allow">Allow</string>
-    <string name="camera_permission_set_alarm_revoked_message">Camera permission has been permanently revoked. Without it QRAlarm can not work properly. In order to fix it, go to settings and allow QRAlarm to use phone’s camera.</string>
-    <string name="camera_permission_add_code_revoked_message">Camera permission has been permanently revoked. Without it You can not set a new dismiss code and dismiss alarms. Go to settings and allow QRAlarm to use phone’s camera.</string>
-    <string name="snooze">SNOOZE</string>
-    <string name="alarm_notification_text_snooze">Snooze over! Go and scan Your QR Code!</string>
-    <string name="alarm_at">Alarm set at:</string>
-    <string name="drag_to_set_alarm">Drag to set alarm time:</string>
-    <string name="snooze_duration_setting_title">Snooze duration</string>
-    <string name="snooze_duration_setting_description">Set the duration of all snoozes in minutes</string>
-    <string name="snooze_number_setting_title">Snooze number</string>
-    <string name="snooze_number_setting_description">Set the number of available snoozes</string>
-    <string name="gentle_wakeup_setting_title">Gentle wake up</string>
-    <string name="gentle_wakeup_setting_description">Set the duration in seconds of alarm volume increase</string>
-    <string name="accept_all_codes_setting_title">Accept all codes</string>
-    <string name="accept_all_codes_setting_description">The app will scan for both QR Codes and Barcodes</string>
-    <string name="alarm_sound">Alarm sound</string>
-    <string name="gentle_guitar">Gentle guitar</string>
-    <string name="alarm_clock">Alarm clock</string>
-    <string name="air_horn">Air horn</string>
-    <string name="download_code_title">Download code</string>
-    <string name="download_code_description">Download the default QR code image to gallery</string>
-    <string name="saved_default_qrcode">Downloaded default QR Code!</string>
-    <string name="not_saved_default_qrcode">Failed to download the default QR Code…</string>
-    <string name="scan_new_code_title">Scan new code</string>
-    <string name="scan_new_code_description">Scan your own code for it be used to turn off alarms</string>
-    <string name="it_is_ok">It\'s OK</string>
-    <string name="again">Again</string>
-    <string name="new_code_added_title">New code added</string>
-    <string name="new_code_added_message">The code “%1$s” has been set as the new dismiss code for the alarm. You can try scanning again for the code if the scan result is not what You wanted.</string>
-    <string name="current_dismiss_code">Current dismiss code: \"%1$s\"</string>
-    <string name="cancel_capitals" tools:ignore="ButtonCase">CANCEL</string>
-    <string name="alarm_set">Alarm set</string>
-    <string name="qralarm_guide_title">QRAlarm Guide</string>
-    <string name="qralarm_guide_description">Check how to use and ensure stability of  the application</string>
-    <string name="guide">Guide</string>
-    <string name="get_your_qrcode">Get your QR Code</string>
-    <string name="download_or_scan_code_description">QRAlarm lets you set alarms that can be turned off by scanning a QR Code. This can not be just any QR Code! Before you set up your first alarm, you should Download a default Code Image from the Settings. In case you already have your own QR Code then scan it - QRAlarm will remember it for you and will use it to cancel Your alarms! Note, that you can also enable the Barcodes support in the Settings.</string>
-    <string name="previous">Previous</string>
-    <string name="next">Next</string>
-    <string name="important">IMPORTANT!</string>
-    <string name="fix_background_work">Fix background work</string>
-    <string name="background_work_description">Unfortunately many smartphone manufacturers prefer longer battery life (even if barely noticeable) over properly working applications! Samsung, OnePlus, Huawei, Xiaomi and many others tend to be killing applications while they are working in the background. QRAlarm can also suffer this problem! Many smartphone manufacturers kill the app completely along with the alarm that was set via the QRAlarm application. In order to fix this issue, please, go to dontkillmyapp.com and follow the instructions for Your smartphone - this should help mitigate the “optimizations” carried out by Your operating system.</string>
-    <string name="dontkillmyapp_short" translatable="false">dontkillmyapp.com</string>
-    <string name="dontkillmyapp_verbose" translatable="false">https://dontkillmyapp.com/</string>
-    <string name="local_sound">Local sound</string>
-    <string name="not_saved_local_sound">Alarm sound couldn\'t be saved.</string>
-    <string name="saved_local_sound">Selected alarm sound has been saved!</string>
-    <string name="notifications_permission_required_title">Notifications permission required</string>
-    <string name="notifications_permission_required_message">QRAlarm needs the permission to post notifications when the alarm goes off. Without it the alarm will not be accompanied by the notification.</string>
-    <string name="notifications_permission_revoked_message">Notifications permission has been permanently revoked. Without it the alarm is not accompanied by the notification. Go to settings and allow QRAlarm to post notifications.</string>
-    <string name="disabling_barcodes_title">Disabling Barcodes</string>
-    <string name="disabling_barcodes_message">You are trying to disable Barcodes support. If Your dismiss code is tied to a previously scanned Barcode You won\'t be able to dismiss future alarms! Are You sure You want to proceed?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="time_left_hours_minutes">Time left: %1$d h %2$d min</string>
-    <string name="time_left_minutes">Time left: %1$d min</string>
-    <string name="enable_vibrations_setting_title">Enable vibrations</string>
-    <string name="enable_vibrations_setting_description">The alarm sound will be accompanied by vibrations</string>
-    <string name="alarm_set_indication_notification_channel_name">Notifying about alarms</string>
-    <string name="alarm_set_indication_notification_channel_description">Notifies about currently set alarm or missed alarms, hides in the notification drawer, does not make sound</string>
-    <string name="upcoming_alarm_indication_notification_title">Upcoming alarm</string>
-    <string name="upcoming_alarm_indication_notification_text">Alarm has been set for %1$s</string>
-    <string name="do_you_have_code">Do You have the code?</string>
-    <string name="make_sure_you_have_code">Please make sure that You have visited Settings and either downloaded the default QRAlarm QR code (“Download code” option) or scanned Your own QR/Bar code (“Scan new code” option). If you don’t have a default or your own code ready to be scanned YOU CAN’T STOP THE ALARM!</string>
-    <string name="done">Done!</string>
-    <string name="yes_i_have_code">Yes - I have a valid QR/Bar code.</string>
-    <string name="cancel_alarm">Cancel the alarm</string>
-    <string name="alarm_in_less_than_1h_cancel_by_scanning">Alarm in less than 1 hour. Cancel by scanning the code!</string>
-    <string name="full_screen_intent_permission_required_title">Full screen notifications required</string>
-    <string name="full_screen_intent_permission_required_message">QRAlarm needs the permission to display full screen notifications on your lock screen when the alarm goes off. Please enable this functionality in the settings.</string>
-    <string name="alarm_missed_notification_title">Alarm missed!</string>
-    <string name="alarm_missed_notification_text">Your previously set alarm was missed likely due to time change on your phone</string>
-    <string name="browser_not_found">Web browser not found</string>
-    <string name="browser_not_found_description">QRAlarm could not find the web browser application to open the link. If you believe the browser is installed - please, open the link manually.</string>
-    <string name="enable_repeating_alarms_title">Enable repeating alarms</string>
-    <string name="enable_repeating_alarms_message">When you dismiss the alarm QRAlarm will automatically set a new alarm for the next day with the same time as the previous one.\n\nNote: If you dismiss the alarm BEFORE its scheduled time, QRAlarm will NOT set the alarm automatically.</string>
-    <string name="enable">Enable</string>
-    <string name="cancel">Cancel</string>
-    <string name="disable_repeating_alarms_title">Disable repeating alarms</string>
-    <string name="disable_repeating_alarms_message">QRAlarm will no longer set new alarms automatically.</string>
-    <string name="disable">Disable</string>
-    <string name="temporary_mute_setting_title">Temporary mute</string>
-    <string name="temporary_mute_setting_description">Alarm will be muted for 15 seconds after clicking STOP</string>
+<resources>
+    <string name="app_name">QRAlarm</string>
 </resources>
