--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
+    <plurals name="number_of_snoozes_plural">
+        <item quantity="one">%1$d snooze</item>
+        <item quantity="other">%1$d snoozes</item>
+    </plurals>
+
+    <plurals name="snooze_duration_plural">
+        <item quantity="other">%1$d minutes</item>
+    </plurals>
+
+    <plurals name="number_of_seconds_plural">
+        <item quantity="other">%1$d seconds</item>
+    </plurals>
+
     <string name="app_name">QRAlarm</string>
     <string name="welcome_to_qralarm">Welcome to QRAlarm!</string>
     <string name="wake_up_catchphrase">Wake UP!</string>
@@ -10,4 +23,30 @@
     <string name="lets_go">Let\'s go!</string>
     <string name="home">Home</string>
     <string name="alarms">Alarms</string>
+    <string name="alarm">Alarm</string>
+    <string name="alarm_enabled">Alarm enabled</string>
+    <string name="repeating">Repeating</string>
+    <string name="snooze">Snooze</string>
+    <string name="ringtone">Ringtone</string>
+    <string name="vibrations">Vibrations</string>
+    <string name="use_qr_bar_code">Use QR/Bar code</string>
+    <string name="assign_specific_code">Assign specific code</string>
+    <string name="assign_specific_code_description">The alarm can be disabled with any code. Click below to scan your own QR or Bar code to be used to disable this alarm:</string>
+    <string name="scan_your_own_code">Scan your own code</string>
+    <string name="gentle_wake_up">Gentle wake up</string>
+    <string name="temporary_mute">Temporary mute</string>
+    <string name="gentle_wake_up_description">Alarm volume will increase for the specified time.</string>
+    <string name="temporary_mute_description">Alarm will be muted for 15 seconds after clicking STOP.</string>
+    <string name="only_once">Only once</string>
+    <string name="custom">Custom</string>
+    <string name="number_of_snoozes">Number of snoozes:</string>
+    <string name="snooze_duration">Snooze duration:</string>
+    <string name="no_snoozes">No snoozes</string>
+    <string name="gentle_guitar">Gentle guitar</string>
+    <string name="alarm_clock">Alarm clock</string>
+    <string name="air_horn">Air horn</string>
+    <string name="custom_sound">Custom sound</string>
+    <string name="disabled">Disabled</string>
+    <string name="min">min</string>
+    <string name="sec">sec</string>
 </resources>
