Initial version of assigning custom code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="sec">sec</string>
     <string name="ringtone_successfully_uploaded">Your custom ringtone has been successfully uploaded!</string>
     <string name="ringtone_upload_unsuccessful">Custom ringtone was not uploaded…</string>
+    <string name="code_assigned">Code assigned!</string>
+    <string name="current_code">Current code: %1$s</string>
 </resources>
