--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,8 @@
     <string name="alarm_notification_channel_name">Firing alarms</string>
     <string name="alarm_notification_channel_description">Plays alarm sound, displays a notification and pops up on screen</string>
     <string name="alarm_notification_title">Alarm is up! Wake Up!</string>
+    <string name="alarm_set_indication_notification_channel_name">Notifying about alarms</string>
+    <string name="alarm_set_indication_notification_channel_description">Notifies about currently set alarm or missed alarms, hides in the notification drawer, does not make sound</string>
+    <string name="alarm_missed_notification_title">Alarm missed!</string>
+    <string name="alarm_missed_notification_text">Your previously set alarm was missed likely due to time change on your phone or the phone being off at the time of alarm.</string>
 </resources>
