AlarmScreen now looks different when the alarm is snoozed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="alarm_wake_up">Alarm - wake up!</string>
     <string name="stop">STOP</string>
     <string name="snooze_capitals">SNOOZE</string>
+    <string name="alarm_snoozed_until">Alarm snoozed until:</string>
 </resources>
