--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="alarm_snoozed_until">Alarm snoozed until:</string>
     <string name="upcoming_alarm_indication_notification_title">Upcoming alarm</string>
     <string name="upcoming_alarm_indication_notification_text">Alarm has been set for %1$s</string>
+    <string name="next_step">Next step</string>
 </resources>
