Added the 'Everyday' option to the ChooseAlarmRepeatingScheduleBottomSheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="rooster">Rooster</string>
     <string name="menu">Menu</string>
     <string name="introduction">Introduction</string>
+    <string name="everyday">Everyday</string>
 </resources>
