Added loading states for HomeScreen and AddEditAlarmScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,5 +115,5 @@
     <string name="introduction">Introduction</string>
     <string name="everyday">Everyday</string>
     <string name="no_alarms">No alarms</string>
-    <string name="create_using_button">Create one using the \'+\' button above or below.</string>
+    <string name="create_using_button">Create one using the + button above or below.</string>
 </resources>
